syntax = "proto3";
package client;
import "google/protobuf/empty.proto";

message Identity {
    int32 uid = 1;
    int32 gid = 2;
}

service ClientManagement {
    // client apply a identity from the server
    rpc GetIdentity(google.protobuf.Empty) returns (Identity) {}
}

message KeyRegistration {
    int32 uid = 1;
    bytes public_key = 2;
}

// These are optional request parameters in key request
message KeyRequest {
    int32 uid = 1;
    int32 gid = 2;
}

service KeyManagement {
    // registrate a public key on the server
    rpc KeyRegisterate(KeyRegistration) returns (google.protobuf.Empty) {}

    // fetch all the public keys of the clients from the server
    rpc FetchAllKeys(KeyRequest) returns (stream KeyRegistration) {}
}